Fixed Test Path Spacing
All of the 3 nodes connect properly with correct sizing

--- a/app/styles/domains.css
+++ b/app/styles/domains.css
@@ -32,12 +32,12 @@ height: calc(100% - 20px);
   margin: auto;
 	text-align: center;
 	height:200px;
-      padding:10px 15px;
+      padding-top:10px;
         padding-bottom:50px !important;
 }
 
 .domain__logo img{
-	  max-width:250px !important;
+	  max-width:220px !important;
      max-height:120px !important;
 }
 
