--- a/app/styles/modal.css
+++ b/app/styles/modal.css
@@ -41,7 +41,7 @@ md-dialog {
 }
 
 .domain_modal_logo img{
-	  max-width:250px !important;
+	  max-width:220px !important;
      max-height:120px !important;
 }
 
